// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a select element when override is false 1`] = `
<div
  className="margin-bottom--2"
>
  <div>
    <label
      className="form__label"
    />
    <select
      className="select"
      onChange={[Function]}
    >
      <option>
        Select
      </option>
      <option>
        a
      </option>
      <option>
        b
      </option>
      <option>
        c
      </option>
    </select>
  </div>
</div>
`;

exports[`Renders an input element when override is true 1`] = `
<div
  className="margin-bottom--2"
>
  <div>
    <label
      className="form__label"
    />
    <input
      className="input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;
